# backtrack

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: trunks.rs
data/: 10-6-cannot.txt  10-7-cannot.txt  11-14-full-B.txt  11-14-full-C.txt  11-14-full.txt  11-14-notfull.txt  11-4-cannot.txt  11-4.txt  13-10-full.txt  13-10-notfull.txt  default-1.txt  default-2.txt  default-3.txt
src/: 8queens.rs  backtracker.rs  config.rs  lib.rs  main.rs  queen.rs  test.rs  trunk-pack.rs  trunks.rs
